src/test/resources/typeSystemTestModels/valid/fieldsAndLocalVars/FieldNoDuplicateModifier.java
package typeSystemTestModels.valid.fieldsAndLocalVars;

public class  FieldNoDuplicateModifier {
  public int n;
  private int nn;
  protected int nnn;

}