src/test/resources/typeSystemTestModels/invalid/classes/ClassInnerTypeNotNamedAsEnclosing.java
package typeSystemTestModels.invalid.classes;

public class ClassInnerTypeNotNamedAsEnclosing {

  public class ClassInnerTypeNotNamedAsEnclosing {

  }

  public interface ClassInnerTypeNotNamedAsEnclosing {

  }

}